// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Suggestion renders a topic suggestion 1`] = `
<a
  className="search-suggestion"
  href="http://example.com/node/1"
  tabIndex="0"
>
  <div
    className="search-suggestion__type"
  >
    Topic
  </div>
  <div
    className="search-suggestion__body"
  >
    <div
      className="search-suggestion__label"
    >
      
      <b>
        Open
      </b>
       Social is great for customisable communities
    </div>
  </div>
</a>
`;

exports[`Suggestion renders an event with a tag 1`] = `
<a
  className="search-suggestion"
  href="http://example.com/node/2"
  tabIndex="0"
>
  <div
    className="search-suggestion__type"
  >
    Event
  </div>
  <div
    className="search-suggestion__body"
  >
    <div
      className="search-suggestion__label"
    >
      Open Social 
      <b>
        launch
      </b>
       party
    </div>
    <div
      className="search-suggestion__tags"
    >
      <span
        className="search-suggestion__tag badge badge-default badge--pill"
      >
        You are enrolled to this event
      </span>
    </div>
  </div>
</a>
`;
